--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "koa-router": "^9.1.0",
     "mysql": "^2.18.1",
     "mysql2": "^2.1.0",
+    "node-schedule": "^1.3.2",
+    "nodemailer": "^6.4.11",
     "sequelize": "^6.3.3",
     "superagent": "^5.3.1",
     "superagent-charset": "^1.2.0"
