feature:restructure 1.0 browser headless

--- a/.env
+++ b/.env
@@ -1,5 +1,8 @@
-MYSQL_USER=kab
-MYSQL_ROOT_PASSWORD=xiaoyan106
-MYSQL_ROOT_HOST=%
+MYSQL_ROOT_HOST=118.190.245.148
+MYSQL_USER=root
+MYSQL_PASSWORD=xiaoyan106
 MYSQL_DATABASE=watch
+MYSQL_PORT=3307
+
+
 MYSQL_DIR=./mysql
