--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "web watch",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "cross-env NODE_ENV=development  nodemon app.js",
+    "pro": "cross-env NODE_ENV=production  node app.js"
   },
   "author": "'dingtt'",
   "license": "ISC",
@@ -16,8 +18,14 @@
     "mysql2": "^2.1.0",
     "node-schedule": "^1.3.2",
     "nodemailer": "^6.4.11",
+    "puppeteer": "^5.5.0",
+    "puppeteer-core": "^5.5.0",
     "sequelize": "^6.3.3",
     "superagent": "^5.3.1",
     "superagent-charset": "^1.2.0"
+  },
+  "devDependencies": {
+    "cross-env": "^7.0.2",
+    "dotenv": "^8.2.0"
   }
 }
